--- a/package.json
+++ b/package.json
@@ -28,5 +28,6 @@
     "less-vars-to-js": "^1.2.0",
     "react-app-rewire-less": "^2.0.7",
     "react-app-rewired": "^1.3.3"
-  }
+  },
+  "proxy": "http://rtds-api-brian.herokuapp.com"
 }
