--- a/package.json
+++ b/package.json
@@ -29,13 +29,5 @@
     "react-app-rewire-less": "^2.0.7",
     "react-app-rewired": "^1.3.3"
   },
-  "root":"build/",
-    "routes":{
-        "/**": "index.html"
-    },
-    "proxies":{
-      "/api/":{
-        "origin":"http://redtomatods-api.herokuapp.com/api"
-        }
-        }
+  "proxy": "https://redtomatods-api.herokuapp.com"
 }
